# GraphQAAgent

./: .env.example  .gitignore  BACKLOG.md  Dockerfile  Makefile.paper  README.md  docker-compose.backend.yml  docker-compose.kgrag.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-ollama.sh
.deepeval/: .deepeval_telemetry.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Planning/: EVALUATION_PLAN.md
config/: domain.yaml
data/competency_questions/: nuclear_decom_cqs.json
data/ontologies/: ndd_ontology.ttl
data/qa_benchmarks/: README.md  benchmark_v1.json  benchmark_v2.json  benchmark_v3.json
docs/: THIRD_PARTY.md
planning/: C3_GRAPH_INTERFACE.md  C3_LITERATURE.md  C3_RETRIEVAL_STRATEGIES.md  FASTAPI_BACKEND_PLAN.md
planning/ts-snippets/: chatHooks.ts  kgragClient.ts
scripts/: compare_strategies.py  export_results.py  gap_report.py  run_benchmark_comparison.py  run_deepeval_on_results.py  run_demo.sh  run_evaluation.py  run_gap_analysis.py  run_qa.py  start_demo.sh
src/kgrag/: __init__.py  cli.py
src/kgrag/adapters/: __init__.py  agentic_reasoner_adapter.py  langchain_ollama_adapter.py.bak
src/kgrag/agents/: __init__.py  answer_generator.py  (+6 more)
tests/: conftest.py  test_chat_route.py  test_tracing_session.py
tests/agents/: test_agentic_adapter.py  test_answer_generator.py  test_answer_verifier.py  test_chain_of_thought.py  test_explainer.py  test_orchestrator.py  test_question_parser.py
tests/api/: test_chat_routes.py  test_chat_schemas.py  test_explorer_routes.py  test_hitl_routes.py  test_strategies.py
tests/chat/: test_history.py  test_session.py  test_session_manager.py  test_streaming.py
tests/connectors/: test_langsmith.py  test_neo4j_helpers.py
tests/core/: test_models.py
tests/evaluation/: test_comparator.py  test_deepeval_metrics.py  test_metrics.py
tests/frontend/: test_components.py
tests/hitl/: test_change_proposals.py  test_gap_detection.py  test_kg_versioning.py  test_ontology_gap_analyzer.py
tests/retrieval/: test_active_ontology.py  test_gap_integration.py  test_graph.py  test_graph_of_thought.py  test_graph_reasoning.py  test_hybrid.py  test_kg_constrained.py  test_path_ranker.py  test_vector.py
(+74 files in other folders)
