[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kg-rag-agent"
version = "0.1.0"
description = "Ontology-informed GraphRAG QA Agent consuming Knowledge Graphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Florian Neubürger" },
]

dependencies = [
    # --- Core ---
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "structlog>=24.1",
    "httpx>=0.27",

    # --- Storage Connectors (read-only) ---
    "neo4j>=5.15,<6",
    "qdrant-client>=1.7,<2",

    # --- Embeddings & Reranking ---
    "numpy>=1.26,<2",
    "sentence-transformers>=3.0",

    # --- LLM ---
    "ollama>=0.4",
    "langchain-core>=0.2",
    "langchain-ollama>=0.1",
    "langchain>=0.2",

    # --- Text Processing ---
    "rapidfuzz>=3.5",

    # --- API (optional) ---
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # --- Experiment Tracking ---
    "wandb>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.6",
]
eval = [
    "rouge-score>=0.1.2",
    "nltk>=3.8",
    "matplotlib>=3.8",
    "jinja2>=3.1",
]

[project.scripts]
kgrag = "kgrag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kgrag"]

# --- Ruff ---
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["kgrag"]

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "qdrant_client.*",
    "sentence_transformers.*",
    "ollama.*",
    "rapidfuzz.*",
    "wandb.*",
]
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: requires running Neo4j/Qdrant/Fuseki",
    "slow: long-running evaluation tests",
]
